--- a/backend/public/css/exceltable.css
+++ b/backend/public/css/exceltable.css
@@ -8,5 +8,11 @@
 .cell{
     text-align: center;vertical-align: middle;
 }
+.late{
+    /*background-color: #FF0000;*/
+    /*color: #ffffff;*/
+
+    color: #FF0000;
+}
 
 
