--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -227,6 +227,27 @@
             </ul>
           </li>
 
+
+          <li class="has-submenu" routerLinkActive="active" >
+            <a routerLink="#" ><i class="fa fa-chart"></i>Appraisal</a>
+            <ul class="submenu">
+              <li class="">
+<!--                <label>Test</label>-->
+                <a routerLink="appraisal/head">Create Appraisal Head</a>
+                <a routerLink="appraisal/scale">Create Appraisal Scale</a>
+                <a routerLink="appraisal/template">Create Appraisal Template</a>
+                <a routerLink="appraisal/configuration">Appraisal Year Configuration</a>
+                <a routerLink="appraisal/assign/employee">Assign Template to Employee</a>
+                <a routerLink="payroll/salary/generate">Appraisal</a>
+                <hr>
+                <a routerLink="#">Employee Wise Detail Report</a>
+                <a routerLink="#">Employee Static Report</a>
+                <a routerLink="#">Appraisal Format Report</a>
+
+              </li>
+            </ul>
+          </li>
+
           <!--<li class="has-submenu">-->
             <!--<a href="#"><i class="ti-files"></i>Pages</a>-->
             <!--<ul class="submenu megamenu">-->
