--- a/frontend/src/app/components/appraisal/create-appraisal-head/create-appraisal-head.component.html
+++ b/frontend/src/app/components/appraisal/create-appraisal-head/create-appraisal-head.component.html
@@ -42,9 +42,9 @@
       <div class="form-group col-md-12" *ngIf="rule ==false" >
         <label>Head Type</label>
         <select class="form-control" formControlName="headType" name="headType">
-          <option>Numbering</option>
-          <option>Descriptive</option>
-          <option>T/F</option>
+          <option value="NM">Numbering</option>
+          <option value="DS">Descriptive</option>
+          <option value="TF">T/F</option>
         </select>
       </div>
 
