--- a/frontend/src/app/components/appraisal/appraisal-existing-heads/appraisal-existing-heads.component.html
+++ b/frontend/src/app/components/appraisal/appraisal-existing-heads/appraisal-existing-heads.component.html
@@ -1,14 +1,31 @@
 <div class="card">
 
   <div class="card-body">
-    <table class="table">
+
+
+
+    <table datatable  id="example" class="table" [dtOptions]="dtOptions" [dtTrigger]="dtTeigger">
       <thead>
-      <th>Head Name</th>
-      <th>Head Type</th>
-      <th>Description</th>
-      <th>Group Name</th>
-      <th>Action</th>
+      <tr>
+        <th>Head Name</th>
+        <th>Head Type</th>
+        <th>Description</th>
+        <th>Group Name</th>
+        <th>Action</th>
+      </tr>
       </thead>
+      <tbody>
+        <tr>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+        </tr>
+      </tbody>
     </table>
+
+
+
   </div>
 </div>
