--- a/frontend/src/app/components/leave/leave-summery/leave-summery.component.html
+++ b/frontend/src/app/components/leave/leave-summery/leave-summery.component.html
@@ -140,13 +140,15 @@
 
 
 
-
+<div class="container">
 <div class="card">
-  <div class="card-header">
-    Showing Leave Requests
+
+  <div class="card-header-pills">
+    <h3 class="col-md-12" align="center"> Showing Leave Requests</h3>
   </div>
 
   <div class="card-body">
+
 
     <table datatable class="table table-striped table-bordered" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
       <thead>
@@ -165,7 +167,7 @@
 
     </table>
 
-
+    </div>
 
   </div>
 </div>
