--- a/frontend/src/app/components/leave/add-leave/add-leave.component.html
+++ b/frontend/src/app/components/leave/add-leave/add-leave.component.html
@@ -52,13 +52,13 @@
 
         <table class="table table-bordered table-striped">
           <thead>
-            <th style="text-align: center">applicationDate</th>
-            <th style="text-align: center">fkLeaveCategory</th>
-            <th style="text-align: center">applicationStatus</th>
-            <th style="text-align: center">startDate</th>
-            <th style="text-align: center">endDate</th>
-            <th style="text-align: center">noOfDays</th>
-            <th style="text-align: center">remarks</th>
+            <th style="text-align: center">Application Date</th>
+            <th style="text-align: center">Leave Category</th>
+            <th style="text-align: center">Status</th>
+            <th style="text-align: center">Start Date</th>
+            <th style="text-align: center">End Date</th>
+            <th style="text-align: center">No of Days</th>
+            <th style="text-align: center">Remarks</th>
             <th style="text-align: center">Reject Cause</th>
           </thead>
           <tbody>
