--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- Navigation Bar-->
-<header id="topnav">
+<header id="topnav" *ngIf="nav.visible">
   <div class="topbar-main">
     <div class="container-fluid">
 
