--- a/frontend/src/app/components/appraisal/create-appraisal-employee/create-appraisal-employee.component.html
+++ b/frontend/src/app/components/appraisal/create-appraisal-employee/create-appraisal-employee.component.html
@@ -5,8 +5,18 @@
        <div class="card-body">
          <div class="form-group">
            <label>Employee</label>
-           <input class="form-control" placeholder="select employee">
+           <!--<input class="form-control" placeholder="select employee">-->
+           <ng-multiselect-dropdown
+                   [placeholder]="'Select Employee'"
+                   [data]="dropdownList"
+                   [(ngModel)]="selectedItems"
+                   [settings]="dropdownSettings"
+                   (onSelect)="onItemSelect($event)"
+                   (onSelectAll)="onSelectAll($event)"
+           >
+           </ng-multiselect-dropdown>
          </div>
+
          <div class="form-group">
            <label>Template</label>
            <input class="form-control" placeholder="enter template name">
