--- a/frontend/src/app/components/appraisal/create-appraisal-configuration/create-appraisal-configuration.component.html
+++ b/frontend/src/app/components/appraisal/create-appraisal-configuration/create-appraisal-configuration.component.html
@@ -4,20 +4,12 @@
       <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
         <div class="row">
 
-          <!--        <input name="recentJoinDate" bsDatepicker-->
-          <!--               [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }" [(ngModel)]="salaryModel.date"  class="form-control">-->
-
           <div class="col-md-2 form-group">
             <label>appraisalYear  <span style="color: red">*</span></label>
             <input type="number" class="form-control" [(ngModel)]="configurationModel.appraisalYear"
                    name="appraisalYear" #appraisalYear="ngModel">
           </div>
 
-<!--          <div class="col-md-2 form-group">-->
-<!--            <label>appraise</label>-->
-<!--            <input type="text" class="form-control" [(ngModel)]="configurationModel.appraise" name="appraise"-->
-<!--                   #appraise="ngModel">-->
-<!--          </div>-->
 
 
           <div class="col-md-2 form-group">
@@ -81,9 +73,8 @@
           <th>Middle Name</th>
           <th>Last Name</th>
           <th>Employee ID</th>
-          <th>Designation</th>
           <th>Department</th>
-<!--          <th>Action</th>-->
+          <th>Action</th>
         </tr>
         </thead>
 
