--- a/frontend/src/app/components/appraisal/create-appraisal-employee/create-appraisal-employee.component.html
+++ b/frontend/src/app/components/appraisal/create-appraisal-employee/create-appraisal-employee.component.html
@@ -1,78 +1,131 @@
+<div class="container-fluid">
+  <div class="card">
+    <div class="card-body">
+
+      <div class="row">
+
+        <div class="col-md-2 form-group">
+          <label>appraisalYear <span style="color: red">*</span></label>
+          <input type="number" class="form-control" [(ngModel)]="configurationModel.appraisalYear"
+                 name="appraisalYear" #appraisalYear="ngModel">
+        </div>
+
+
+        <div class="col-md-2 form-group">
+          <label>appraisalStart <span style="color: red">*</span></label>
+          <input name="appraisalStart" bsDatepicker
+                 [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }" class="form-control"
+                 [(ngModel)]="configurationModel.appraisalStart" #appraisalStart="ngModel">
+
+        </div>
+
+        <div class="col-md-2 form-group">
+          <label>appraisalEnd <span style="color: red">*</span></label>
+          <input name="appraisalEnd" bsDatepicker
+                 [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }" class="form-control"
+                 [(ngModel)]="configurationModel.appraisalEnd" #appraisalEnd="ngModel">
+        </div>
+
+        <div class="col-md-2 form-group">
+          <label>appraisalStatus <span style="color: red">*</span></label>
+          <!--          0 = Pending, 1 = Done, 2 = Cancel-->
+          <select class="form-control" [(ngModel)]="configurationModel.appraisalStatus" name="appraisalStatus"
+                  #appraisalStatus="ngModel">
+            <option value="0">Pending</option>
+            <option value="1">Done</option>
+            <option value="2">Cancel</option>
+          </select>
+        </div>
+        <div class="col-md-2 form-group">
+          <label>remarks</label>
+          <input type="text" class="form-control" [(ngModel)]="configurationModel.remarks" name="remarks"
+                 #remarks="ngModel">
+        </div>
+
+
+      </div>
+
+    </div>
+  </div>
+</div>
+
 <div class="row m-2">
-   <div class="col-md-6">
-     <div class="card">
-       <div class="card-header">Assign Template for Employee</div>
-       <div class="card-body">
-         <div class="form-group">
-           <label>Employee</label>
-           <!--<input class="form-control" placeholder="select employee">-->
-           <ng-multiselect-dropdown
-                   [placeholder]="'Select Employee'"
-                   [data]="dropdownList"
-                   [(ngModel)]="selectedItems"
-                   [settings]="dropdownSettings"
-                   (onSelect)="onItemSelect($event)"
-                   (onSelectAll)="onSelectAll($event)"
-           >
-           </ng-multiselect-dropdown>
-         </div>
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-header">Assign Template for Employee</div>
+      <div class="card-body">
+        <div class="form-group">
+          <label>Employee</label>
+          <!--<input class="form-control" placeholder="select employee">-->
+          <ng-multiselect-dropdown
+            [placeholder]="'Select Employee'"
+            [data]="dropdownList"
+            [(ngModel)]="selectedItems"
+            [settings]="dropdownSettings"
+            (onSelect)="onItemSelect($event)"
+            (onSelectAll)="onSelectAll($event)"
+          >
+          </ng-multiselect-dropdown>
+        </div>
 
-         <div class="form-group">
-           <label>Template</label>
-           <ng-multiselect-dropdown
-             [placeholder]="'Select Template'"
-             [data]="allTemplate"
-             [(ngModel)]="selectedTemplate"
-             [settings]="dropdownTemplateSettings"
+        <div class="form-group">
+          <label>Template</label>
+          <ng-multiselect-dropdown
+            [placeholder]="'Select Template'"
+            [data]="allTemplate"
+            [(ngModel)]="selectedTemplate"
+            [settings]="dropdownTemplateSettings"
 
-           >
-           </ng-multiselect-dropdown>
-<!--           <input class="form-control" placeholder="enter template name">-->
-         </div>
+          >
+          </ng-multiselect-dropdown>
+          <!--           <input class="form-control" placeholder="enter template name">-->
+        </div>
 
-         <h4>Appraisers With Role</h4>
-         <hr>
-         <table class="table">
-           <tr *ngFor="let dept of appraisers;let i = index" >
-             <td style="width: 70%">
+        <h4>Appraisers With Role</h4>
+        <hr>
+        <table class="table">
+          <tr *ngFor="let dept of appraisers;let i = index">
+            <td style="width: 70%">
 
-               <select  (change)="appraiserEmp(i)" id="selectEmp{{i}}" class="form-control">
-                 <option value="" selected >Select Emp</option>
-                 <option *ngFor="let emp of allEmployees;let i = index" value="{{emp.empid}}" id="{{emp.empid}}">
-                    {{emp.ConcatenatedString}}
-                 </option>
+              <select (change)="appraiserEmp(i)" id="selectEmp{{i}}" class="form-control">
+                <option value="" selected>Select Emp</option>
+                <option *ngFor="let emp of allEmployees;let i = index" value="{{emp.empid}}" id="{{emp.empid}}">
+                  {{emp.ConcatenatedString}}
+                </option>
 
-               </select>
+              </select>
 
-             </td>
-             <td>
+            </td>
+            <td>
 
-               <select name="appraiserRole" (change)="appraiserEmpRole(i)" class="form-control" id="role{{i}}">
-                 <option value="" selected >Select Role</option>
-                 <option value="SUP">Supervisor </option>
-                 <option value="SUB ">Sub-ordinates </option>
-                 <option value="RCM ">Recommender </option>
+              <select name="appraiserRole" (change)="appraiserEmpRole(i)" class="form-control" id="role{{i}}">
+                <option value="" selected>Select Role</option>
+                <option value="1">Self</option>
+                <option value="2">Supervisor</option>
+                <option value="3">Sub-ordinates</option>
+                <option value="4">co-worker</option>
+                <option value="5">Recommender</option>
 
-               </select>
+              </select>
 
-             </td>
-           </tr>
-         </table>
+            </td>
+          </tr>
+        </table>
 
-         <div class="row">
+        <div class="row">
 
-           <button class="btn btn-info" (click)="addRole()">+</button> &nbsp;
-           <button class="btn btn-secondary" (click)="subRole()">-</button>
-         </div>
-         <br>
+          <button class="btn btn-info" (click)="addRole()">+</button> &nbsp;
+          <button class="btn btn-secondary" (click)="subRole()">-</button>
+        </div>
+        <br>
 
-         <div class="row">
-           <button class="btn btn-success pull-right" (click)="assignTemplateToEmp()" type="submit">Save</button>
-         </div>
+        <div class="row">
+          <button class="btn btn-success pull-right" (click)="assignTemplateToEmp()" type="submit">Save</button>
+        </div>
 
-       </div>
-     </div>
-   </div>
+      </div>
+    </div>
+  </div>
 
   <div class="col-md-6">
     <div class="card">
@@ -81,12 +134,36 @@
         <div class="form-group">
           <label>Department</label>
           <!--<input class="form-control" placeholder="select department">-->
-          <select class="form-control" (change)="onDeptChange($event.target.value)" id="markVersionNo" name="markVersionNo" >
+          <select class="form-control" (change)="onDeptChange($event.target.value)" id="markVersionNo"
+                  name="markVersionNo">
             <option value="" selected disabled>Select Department</option>
-            <option *ngFor="let dept of allDept;let i = index" value="{{dept.id}}" >{{dept.departmentName}}</option>
+            <option *ngFor="let dept of allDept;let i = index" value="{{dept.id}}">{{dept.departmentName}}</option>
 
           </select>
         </div>
+
+        <hr>
+        <h4>Emp Appraisal Setup</h4>
+        <table datatable class="table" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+          <thead>
+          <tr>
+
+            <th>First Name</th>
+            <th>Middle Name</th>
+            <th>Last Name</th>
+            <th>Employee ID</th>
+            <th>Format</th>
+            <th>Department</th>
+            <th>Action</th>
+          </tr>
+          </thead>
+
+          <tbody>
+
+          </tbody>
+
+        </table>
+
 
       </div>
     </div>
