--- a/frontend/src/app/components/appraisal/requested-appraisal-form/requested-appraisal-form.component.html
+++ b/frontend/src/app/components/appraisal/requested-appraisal-form/requested-appraisal-form.component.html
@@ -94,7 +94,7 @@
       </div>
       <div class="form-group col-md-12">
         <button type="submit" class="btn btn-success " (click)="onSubmit()">submit</button>
-        <button type="button" class="btn btn-success " (click)="getAppraisorForm()">get info</button>
+<!--        <button type="button" class="btn btn-success " (click)="getAppraisorForm()">get info</button>-->
       </div>
 
     </div>
