--- a/frontend/src/app/components/appraisal/requested-appraisal-list/requested-appraisal-list.component.html
+++ b/frontend/src/app/components/appraisal/requested-appraisal-list/requested-appraisal-list.component.html
@@ -47,7 +47,7 @@
           <td>{{item['appraisalforName']}}</td>
           <td>{{item['appraisorName']}}</td>
           <td>{{item['appraisalDate']}}</td>
-          <td><button class="btn btn-sm btn-sm" (click)="showResultPage(item['id'])">show</button></td>
+          <td><button class="btn btn-sm btn-sm" (click)="showResultPage(item['id'],item['appraisor'],item['setupId'])">show</button></td>
         </tr>
 
 
