--- a/frontend/src/app/components/appraisal/create-appraisal-employee/create-appraisal-employee.component.html
+++ b/frontend/src/app/components/appraisal/create-appraisal-employee/create-appraisal-employee.component.html
@@ -1,53 +1,53 @@
-<div class="container-fluid">
-  <div class="card">
-    <div class="card-body">
+<!--<div class="container-fluid">-->
+<!--  <div class="card">-->
+<!--    <div class="card-body">-->
 
-      <div class="row">
+<!--      <div class="row">-->
 
-        <div class="col-md-2 form-group">
-          <label>appraisalYear <span style="color: red">*</span></label>
-          <input type="number" class="form-control" [(ngModel)]="configurationModel.appraisalYear"
-                 name="appraisalYear" #appraisalYear="ngModel">
-        </div>
-
-
-        <div class="col-md-2 form-group">
-          <label>appraisalStart <span style="color: red">*</span></label>
-          <input name="appraisalStart" bsDatepicker
-                 [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }" class="form-control"
-                 [(ngModel)]="configurationModel.appraisalStart" #appraisalStart="ngModel">
-
-        </div>
-
-        <div class="col-md-2 form-group">
-          <label>appraisalEnd <span style="color: red">*</span></label>
-          <input name="appraisalEnd" bsDatepicker
-                 [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }" class="form-control"
-                 [(ngModel)]="configurationModel.appraisalEnd" #appraisalEnd="ngModel">
-        </div>
-
-        <div class="col-md-2 form-group">
-          <label>appraisalStatus <span style="color: red">*</span></label>
-          <!--          0 = Pending, 1 = Done, 2 = Cancel-->
-          <select class="form-control" [(ngModel)]="configurationModel.appraisalStatus" name="appraisalStatus"
-                  #appraisalStatus="ngModel">
-            <option value="0">Pending</option>
-            <option value="1">Done</option>
-            <option value="2">Cancel</option>
-          </select>
-        </div>
-        <div class="col-md-2 form-group">
-          <label>remarks</label>
-          <input type="text" class="form-control" [(ngModel)]="configurationModel.remarks" name="remarks"
-                 #remarks="ngModel">
-        </div>
+<!--        <div class="col-md-2 form-group">-->
+<!--          <label>appraisalYear <span style="color: red">*</span></label>-->
+<!--          <input type="number" class="form-control" [(ngModel)]="configurationModel.appraisalYear"-->
+<!--                 name="appraisalYear" #appraisalYear="ngModel">-->
+<!--        </div>-->
 
 
-      </div>
+<!--        <div class="col-md-2 form-group">-->
+<!--          <label>appraisalStart <span style="color: red">*</span></label>-->
+<!--          <input name="appraisalStart" bsDatepicker-->
+<!--                 [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }" class="form-control"-->
+<!--                 [(ngModel)]="configurationModel.appraisalStart" #appraisalStart="ngModel">-->
 
-    </div>
-  </div>
-</div>
+<!--        </div>-->
+
+<!--        <div class="col-md-2 form-group">-->
+<!--          <label>appraisalEnd <span style="color: red">*</span></label>-->
+<!--          <input name="appraisalEnd" bsDatepicker-->
+<!--                 [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }" class="form-control"-->
+<!--                 [(ngModel)]="configurationModel.appraisalEnd" #appraisalEnd="ngModel">-->
+<!--        </div>-->
+
+<!--        <div class="col-md-2 form-group">-->
+<!--          <label>appraisalStatus <span style="color: red">*</span></label>-->
+<!--          &lt;!&ndash;          0 = Pending, 1 = Done, 2 = Cancel&ndash;&gt;-->
+<!--          <select class="form-control" [(ngModel)]="configurationModel.appraisalStatus" name="appraisalStatus"-->
+<!--                  #appraisalStatus="ngModel">-->
+<!--            <option value="0">Pending</option>-->
+<!--            <option value="1">Done</option>-->
+<!--            <option value="2">Cancel</option>-->
+<!--          </select>-->
+<!--        </div>-->
+<!--        <div class="col-md-2 form-group">-->
+<!--          <label>remarks</label>-->
+<!--          <input type="text" class="form-control" [(ngModel)]="configurationModel.remarks" name="remarks"-->
+<!--                 #remarks="ngModel">-->
+<!--        </div>-->
+
+
+<!--      </div>-->
+
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 
 <div class="row m-2">
   <div class="col-md-6">
